--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Super Man</title>
 	<link rel="icon" href="img/superman.png">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -35,7 +36,11 @@
 
 
 	</ul>
-
+<div class="custom-shape-divider-top-1671498191">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M1200 0L0 0 892.25 114.72 1200 0z" class="shape-fill"></path>
+    </svg>
+</div>
 </main>
 <!-- footer -->
 <footer>
